# rust4-app

./: .gitignore  BUILD.md  DESIGN.md  LICENSE  README.md
blink-reminder-native/: Cargo.toml  README.md  build_mac.sh  build_win.sh  test_cg.rs  test_d2d.rs  test_idle  test_idle.rs
blink-reminder-native/src/: bin_test.rs  config.rs  mac_window.rs  main.rs  test_cg.rs  timer.rs
blink-reminder-native/src/render/: mac.rs  mod.rs  win.rs
frontend/: index.html  settings.html  test.html  test_svg.html
frontend/scripts/: ripple.js  settings.js
frontend/styles/: main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  test_svg.rs  timer.rs  window.rs
