[package]
name = "app"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.2", features = ["tray-icon", "macos-private-api"] }
tokio = { version = "1", features = ["time"] }
log = "0.4"

# 优化 Release 构建，大幅降低内存占用和包体积
[profile.release]
panic = "abort"   # 禁用 panic 展开，减小体积
codegen-units = 1 # 最大化优化（编译变慢，但运行更快、内存更小）
lto = true        # 开启链接时优化
opt-level = "s"   # 针对体积进行优化
strip = true      # 移除调试符号
